@@ -58,6 +58,7 @@ Additions:
    * Add the repeat_events_set/get for blocking the events of content objects.
    * Add convenient macros - elm_object_translatable_part_text_set(), elm_object_item_translatable_part_text_set().
    * Add the API elm_scroller_page_scroll_limit_set/get.
+   * Add elm_mapbuf_auto_set/get.
 
 Improvements:
 
